--- a/JS-onclick=myFunction()-#2/css/style.css
+++ b/JS-onclick=myFunction()-#2/css/style.css
@@ -59,7 +59,9 @@ html {
         background-color: rgba(0, 0, 0, 0.486);
         height: 4.9rem;
         width: 90%;
-        border: black solid 0.1rem; }
+        border: black solid 0.1rem;
+        color: white;
+        font-size: 2rem; }
         #calculator .calculator-header__screen--on {
           background-color: rgba(0, 255, 255, 0.568);
           color: black; }
@@ -147,7 +149,8 @@ html {
         width: 90%;
         height: 90%;
         font-size: 2rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+ Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         background-color: #ffffff;
         font-weight: bold;
         outline: none; }
