Elements and Classes
Map function can return data with classes

--- a/JS-data.map()-#1/css/style.css
+++ b/JS-data.map()-#1/css/style.css
@@ -29,4 +29,10 @@
             border-radius: 1rem;
             background-color: rgba(100, 100, 100, 0.301);
         }
+
+        .shadow{
+            -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+            box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+        }
       
